// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overflowWrap renders 0 1`] = `
Array [
  .c0 {
  overflow-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowWrap renders function 1`] = `
Array [
  .c0 {
  overflow-wrap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: has;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: has;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowWrap renders invalid theme path 1`] = `
Array [
  .c0 {
  overflow-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowWrap renders negative number 1`] = `
Array [
  .c0 {
  overflow-wrap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowWrap renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  overflow-wrap: July;
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-wrap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: July;
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-wrap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-wrap: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-wrap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowWrap renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    overflow-wrap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-wrap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    overflow-wrap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-wrap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-wrap: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-wrap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-wrap: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowWrap renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  overflow-wrap: July;
}

@media May {
  .c0 {
    overflow-wrap: August;
  }
}

@media April {
  .c0 {
    overflow-wrap: September;
  }
}

@media January {
  .c0 {
    overflow-wrap: November;
  }
}

@media April {
  .c0 {
    overflow-wrap: August;
  }
}

@media June {
  .c0 {
    overflow-wrap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: July;
}

@media May {
  .c0 {
    overflow-wrap: August;
  }
}

@media April {
  .c0 {
    overflow-wrap: September;
  }
}

@media January {
  .c0 {
    overflow-wrap: November;
  }
}

@media April {
  .c0 {
    overflow-wrap: August;
  }
}

@media June {
  .c0 {
    overflow-wrap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-wrap: November;
  }
}

@media April {
  .c0 {
    overflow-wrap: January;
  }
}

@media January {
  .c0 {
    overflow-wrap: December;
  }
}

@media April {
  .c0 {
    overflow-wrap: April;
  }
}

@media June {
  .c0 {
    overflow-wrap: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-wrap: November;
  }
}

@media April {
  .c0 {
    overflow-wrap: January;
  }
}

@media January {
  .c0 {
    overflow-wrap: December;
  }
}

@media April {
  .c0 {
    overflow-wrap: April;
  }
}

@media June {
  .c0 {
    overflow-wrap: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowWrap renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    overflow-wrap: July;
  }
}

@media April {
  .c0 {
    overflow-wrap: August;
  }
}

@media January {
  .c0 {
    overflow-wrap: September;
  }
}

@media April {
  .c0 {
    overflow-wrap: November;
  }
}

@media June {
  .c0 {
    overflow-wrap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    overflow-wrap: July;
  }
}

@media April {
  .c0 {
    overflow-wrap: August;
  }
}

@media January {
  .c0 {
    overflow-wrap: September;
  }
}

@media April {
  .c0 {
    overflow-wrap: November;
  }
}

@media June {
  .c0 {
    overflow-wrap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-wrap: January;
  }
}

@media April {
  .c0 {
    overflow-wrap: December;
  }
}

@media January {
  .c0 {
    overflow-wrap: April;
  }
}

@media April {
  .c0 {
    overflow-wrap: May;
  }
}

@media June {
  .c0 {
    overflow-wrap: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-wrap: January;
  }
}

@media April {
  .c0 {
    overflow-wrap: December;
  }
}

@media January {
  .c0 {
    overflow-wrap: April;
  }
}

@media April {
  .c0 {
    overflow-wrap: May;
  }
}

@media June {
  .c0 {
    overflow-wrap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowWrap renders postitive number 1`] = `
Array [
  .c0 {
  overflow-wrap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowWrap renders string 1`] = `
Array [
  .c0 {
  overflow-wrap: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: June;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: June;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowWrap renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`overflowWrap renders valid theme path 1`] = `
Array [
  .c0 {
  overflow-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
